fix: dropdown overflow

--- a/resources/style.css
+++ b/resources/style.css
@@ -690,20 +690,16 @@ swd-selection a:not(:last-child) {
 *   Dropdown   *
 ***************/
 
-swd-dropdown { position: relative }
 swd-dropdown input[readonly] { cursor: pointer }
 swd-dropdown input { width: 100% }
 
 swd-dropdown-content {
     display: block;
-    position: absolute;
+    position: fixed;
     z-index: 4;
-    min-width: 100%;
     overflow-y: auto;
+    will-change: transform, top, left, width, height;
 }
-
-swd-dropdown-content.swd-dropdown-content-up { bottom: 100% }
-swd-dropdown-content.swd-dropdown-content-right { right: 0 }
 
 /*************
 *   Dialog   *
